# libwaveshare-epd-python

./: .flake8  .pre-commit-config.yaml  README.md  cspell.config.yaml  pyproject.toml
.github/workflows/: validate-code.yaml
docs/: compatibility.md
scripts/: prepare_repository
tests/: test_split_framebuffer.py
waveshare/canvas/: __init__.py  generic.py  grayscale.py  monochrome.py
waveshare/epd/: __init__.py  epd_generic.py  epd_grayscale.py  epd_monochrome.py  lookuptable.py
